work in progress for 2 m_armor_0 choices

--- a/css/customizer.css
+++ b/css/customizer.css
@@ -36,6 +36,8 @@
 
 /* Male */
 .customize-menu .m_head_0       {width: 60px; height: 60px; background-position: -1557px -9px;}
+.customize-menu .m_armor_0_v2   {width: 60px; height: 60px; background-position: -2819px -38px;}
+.customize-menu .m_armor_0_v1   {width: 60px; height: 60px; background-position: -2909px -38px;}
 
 .customize-menu .m_hair_blond   {width: 60px; height: 60px; background-position: -1649px -6px;}
 .customize-menu .m_hair_black   {width: 60px; height: 60px; background-position: -1737px -6px;}
